first version of fully operational supervisor
